drew some sick ass lines

--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Playing with D3js</title>
+	<style>
+	.chart{
+		background-color: black;
+	}
+	.chart circle{
+		stroke:white;
+		stroke-width:2;
+		fill:steelblue;
+	}
+
+	.chart line{
+		stroke:white;
+		stroke-width:2;
+	}
+	</style>
 </head>
 <body>
 	<svg class="chart"></svg>
